--- a/exp/train_gh_controlnet.yaml
+++ b/exp/train_gh_controlnet.yaml
@@ -12,19 +12,21 @@ use_cavp: true       # whether to use CAVP or not
 sample_rate: 44100
 sample_size: 88200    # sample_rate*seconds_audios
 
+rdir: GREATEST-HITS-DATASET/mic-mp4-processed # Make sure to create the mic- folder
+
 datamodule:
   _target_: main.data.datamodule_gh.GreatestHitsDatamodule
-  root_dir: /home/christian/syncfusion/mic-mp4-processed
+  root_dir: ${rdir} #/home/christian/syncfusion/mic-mp4-processed
 
-  train_split_file_path: /home/christian/syncfusion/train.txt
+  train_split_file_path: ${rdir}/train_all.txt #train.txt
   train_data_to_use: 1.0
   train_frames_transforms: null
 
-  val_split_file_path: /home/christian/syncfusion/val_fewer.txt
+  val_split_file_path: ${rdir}/val.txt #/val_fewer.txt
   val_data_to_use: 1.0
   val_frames_transforms: null
 
-  test_split_file_path: /home/christian/syncfusion/test.txt
+  test_split_file_path: ${rdir}/test.txt
   test_data_to_use: 1.0
   test_frames_transforms: null
   
@@ -38,7 +40,7 @@ datamodule:
   batch_size: 12
   num_workers: 8
   pin_memory: True
-  rms_path: /home/christian/syncfusion/logs/video2rms/rms_pred_TCCLIP_best_epoch
+  rms_path: logs/video2rms/rms_pred_TCCLIP_best_epoch #/home/christian/syncfusion/logs/video2rms/rms_pred_TCCLIP_best_epoch
 
 
 
